--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
 
  <div class="container">
-    <h1 class="mb-4">Random Domain Generator</h1>
+    <h1 class="mb-4">Domain Generator</h1>
     <button id="generateBtn" class="btn btn-primary mb-3">Generate Domains</button>
     <ul id="domains" class="list-group"></ul>
   </div>
